@@ -3,6 +3,9 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Bug fix: show a visual cue that a wait time might be needed when editing a
+  content object in a popup dialog, in the eea.relations popup
+  [tiberich #14467]
 * Feature: index all subjects/keywords lowercase
   [ghicaale refs #14384]
 * Feature: store all subjects/keywords lowercase
